# goet

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  test.rdb.sqlite3
goet/: TODO  __init__.py  frame.py  tracer.py
goet/lib/converter/: converter.py  converter_test.py
goet/lib/db/: sqlite.py
goet/lib/frame/: frame.py
goet/lib/path/: get_root_dir.py
goet/tracer/: base.py  print.py  print_test.py  sql.py  sql_test.py
src/: tracer.py
