[metadata]
name = goet
version = 0.0.1
author = Vivek Dasri
author_email = vivster7@gmail.com
description = Python debug recoder (tracer)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vivster7/goet
project_urls =
    Bug Tracker = https://github.com/vivster7/goet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
   goet = goet
python_requires = >=3.9
